# gluonbot

./: .gitignore  CMakeLists.txt  Doxyfile.in  gluonbot-plugin.h  gluonbot.h  gluonbot.pc.in  gluonbot.sample.xml
chanop/: main.c
core/: main.c
gluonbot/: Bot.c  Bot.h  ChannelDesc.c  ChannelDesc.h  Command.c  Command.h  Event.c  Event.h  EventType.h  Group.c  Group.h  IRCSocket.c  IRCSocket.h  Plugin.c  Plugin.h  UserCache.c  UserCache.h  utils.c  utils.h
gluonbot/Event/: CodeEvent.c  CodeEvent.h  CommandEvent.c  CommandEvent.h  ConnectEvent.c  ConnectEvent.h  DisconnectEvent.c  DisconnectEvent.h  Event.h  JoinEvent.c  JoinEvent.h  MessageEvent.c  MessageEvent.h  NickEvent.c  NickEvent.h  PRIVMSGEvent.c  PRIVMSGEvent.h  PartEvent.c  PartEvent.h  PingEvent.c  PingEvent.h  TestEvent.c  TestEvent.h
gluonbot/utils/: utils.c  utils.h
